--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <li><a href="https://saolghra.github.io/portfolio/homepage"> Portfolio </a></li>
     <li><a href="https://saolghra.github.io/blog/homepage"> Blog </a></li>
     <li><a href="https://saolghra.github.io/about/homepage"> About </a></li>
-    <li><a href="https://saolghra.github.io/gallery/homepage"> Gallery </a></li>
+    <li><a href="https://saolghra.github.io/photography"> Gallery </a></li>
   </header>
   <hr>
 
