--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="./script/style.css" type="text/css">
   <link rel="icon" href="./icon/icon.jpg" type="image/x-icon">
   <link rel="shortcut icon" href="./icon/icon.jpg" type="image/x-icon">
+  <meta http-equiv="refresh" content="7; url='https://nexarda.com'" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta charset="UTF-8">
