--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <meta http-equiv="refresh" content="7; url='https://saolghra.github.io/403'" />
   <link rel="stylesheet" href="./script/style.css" type="text/css">
   <link rel="icon" href="./icon/icon.jpg" type="image/x-icon">
   <link rel="shortcut icon" href="./icon/icon.jpg" type="image/x-icon">
