--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
   <header>
     <h2>Spencers Photography</h2>
     <li><a href="https://saolghra.github.io"> Home </a></li>
-    <li><a href="https://saolghra.github.io/portfolio/homepage"> Portfolio </a></li>
-    <li><a href="https://saolghra.github.io/blog/homepage"> Blog </a></li>
-    <li><a href="https://saolghra.github.io/about/homepage"> About </a></li>
-    <li><a href="https://saolghra.github.io/photography"> Gallery </a></li>
+    <li><a href="https://saolghra.github.io/portfolio/homepage/"> Portfolio </a></li>
+    <li><a href="https://saolghra.github.io/blog/"> Blog </a></li>
+    <li><a href="https://saolghra.github.io/about/homepage/"> About </a></li>
+    <li><a href="https://saolghra.github.io/photography/"> Gallery </a></li>
   </header>
   <hr>
 
