--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta charset="UTF-8">
   <title>Photography | Spencer</title>
 </head>
-
+<!--
 <body>
   <header>
     <h2>Spencers Photography</h2>
@@ -22,6 +22,29 @@
     <li><a href="https://saolghra.github.io/photography/"> Gallery </a></li>
   </header>
   <hr>
+-->
+        <!--===== HEADER =====-->
+        <header class="l-header">
+          <nav class="nav bd-grid">
+              <div>
+                  <a href="../index" class="nav__logo">Spencer</a>
+              </div>
+
+              <div class="nav__menu" id="nav-menu">
+                  <ul class="nav__list">
+                      <li class="nav__item"><a href="https://saolghra.github.io" class="nav__link active">Home</a></li>
+                      <li class="nav__item"><a href="https://saolghra.github.io/about/homepage" class="nav__link">About</a></li>
+                      <li class="nav__item"><a href="https://saolghra.github.io/portfolio/homepage" class="nav__link">Portfolio</a></li>
+                      <li class="nav__item"><a href="https://saolghra.github.io/blog/" class="nav__link">Blog</a></li>
+                      <li class="nav__item"><a href="https://saolghra.github.io/Photography/" class="nav__link">Gallary</a></li>
+                  </ul>
+              </div>
+
+              <div class="nav__toggle" id="nav-toggle">
+                  <i class='bx bx-menu'></i>
+              </div>
+          </nav>
+      </header>
 
   <main class="grid">
     <img src="img/img1.jpg" />
