--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <header class="l-header">
           <nav class="nav bd-grid">
               <div>
-                  <a href="../index" class="nav__logo">Spencer</a>
+                  <a href="https://saolghra.github.io" class="nav__logo">Spencer</a>
               </div>
 
               <div class="nav__menu" id="nav-menu">
@@ -35,8 +35,8 @@
                       <li class="nav__item"><a href="https://saolghra.github.io" class="nav__link active">Home</a></li>
                       <li class="nav__item"><a href="https://saolghra.github.io/about/homepage" class="nav__link">About</a></li>
                       <li class="nav__item"><a href="https://saolghra.github.io/portfolio/homepage" class="nav__link">Portfolio</a></li>
-                      <li class="nav__item"><a href="https://saolghra.github.io/blog/" class="nav__link">Blog</a></li>
-                      <li class="nav__item"><a href="https://saolghra.github.io/Photography/" class="nav__link">Gallary</a></li>
+                      <li class="nav__item"><a href="https://saolghra.github.io/blog" class="nav__link">Blog</a></li>
+                      <li class="nav__item"><a href="https://saolghra.github.io/Photography" class="nav__link">Gallary</a></li>
                   </ul>
               </div>
 
