fixed and added
Should have fixed the header
Added a footer

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                       <li class="nav__item"><a href="https://saolghra.github.io/about/homepage" class="nav__link">About</a></li>
                       <li class="nav__item"><a href="https://saolghra.github.io/portfolio/homepage" class="nav__link">Portfolio</a></li>
                       <li class="nav__item"><a href="https://saolghra.github.io/blog" class="nav__link">Blog</a></li>
-                      <li class="nav__item"><a href="https://saolghra.github.io/Photography" class="nav__link">Gallary</a></li>
+                      <li class="nav__item"><a href="https://saolghra.github.io/photography/" class="nav__link">Gallary</a></li>
                   </ul>
               </div>
 
@@ -45,6 +45,17 @@
               </div>
           </nav>
       </header>
+
+        <!--===== FOOTER =====-->
+        <footer class="footer">
+          <p class="footer__title">Social Media</p>
+          <div class="footer__social">
+              <a href="https://Linkedin.com/" class="footer__icon"><i class='bx bxl-linkedin' ></i></a>
+              <a href="https://instagram.com/Saolyah" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
+              <a href="https://youtube.com/channel/UCB08sMsshzAPcY7aVr3ww3g" class="footer__icon"><i class='bx bxl-youtube' ></i></a>
+          </div>
+          <p>&#169; 2022 copyright all right reserved</p>
+      </footer>
 
   <main class="grid">
     <img src="img/img1.jpg" />
