--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html lang="en">
 
 <head>
-  <meta http-equiv="refresh" content="7; url='https://saolghra.github.io/403'" />
+<!--  <meta http-equiv="refresh" content="7; url='https://saolghra.github.io/403'" /> -->
+  <!-- =====BOX ICONS===== -->
+  <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
+  <script src="https://unpkg.com/boxicons@2.0.9/dist/boxicons.js"></script>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+  <!-- =====Styles and Contextual=====-->
   <link rel="stylesheet" href="./script/style.css" type="text/css">
   <link rel="icon" href="./icon/icon.jpg" type="image/x-icon">
   <link rel="shortcut icon" href="./icon/icon.jpg" type="image/x-icon">
@@ -32,11 +37,11 @@
 
               <div class="nav__menu" id="nav-menu">
                   <ul class="nav__list">
-                      <li class="nav__item"><a href="https://saolghra.github.io" class="nav__link active">Home</a></li>
+                      <li class="nav__item"><a href="https://saolghra.github.io" class="nav__link">Home</a></li>
                       <li class="nav__item"><a href="https://saolghra.github.io/about/homepage" class="nav__link">About</a></li>
                       <li class="nav__item"><a href="https://saolghra.github.io/portfolio/homepage" class="nav__link">Portfolio</a></li>
                       <li class="nav__item"><a href="https://saolghra.github.io/blog" class="nav__link">Blog</a></li>
-                      <li class="nav__item"><a href="https://saolghra.github.io/photography/" class="nav__link">Gallary</a></li>
+                      <li class="nav__item"><a href="https://saolghra.github.io/photography/" class="nav__link active">Gallary</a></li>
                   </ul>
               </div>
 
@@ -45,6 +50,11 @@
               </div>
           </nav>
       </header>
+<br><br>
+  <main class="grid">
+    <img src="img/img1.jpg" />
+    <img src="img/img2.jpg" />
+  </main>
 
         <!--===== FOOTER =====-->
         <footer class="footer">
@@ -57,10 +67,12 @@
           <p>&#169; 2022 copyright all right reserved</p>
       </footer>
 
-  <main class="grid">
-    <img src="img/img1.jpg" />
-    <img src="img/img2.jpg" />
-  </main>
+        <!--===== SCROLL REVEAL =====-->
+        <script src="https://unpkg.com/scrollreveal"></script>
+
+        <!--===== MAIN JS =====-->
+        <script src="./script/js/main.js    "></script>
+
          <!---==== PARTICLES JS=====-->
          <div id="particles-js"></div>
          <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
