--- a/index.html
+++ b/index.html
@@ -52,8 +52,10 @@
       </header>
 <br><br>
   <main class="grid">
-    <img src="img/img1.jpg" />
-    <img src="img/img2.jpg" />
+    <li><img src="img/img3.jpg" />Guitar photoshoot 1</li>
+    <li><img src="img/img4.jpg" />Guitar photoshoot 2</li>
+    <li><img src="img/img5.jpg" />Doggy Chillin 1</li>
+    <li><img src="img/img6.jpg" />Doggy chillin 2</li>
   </main>
 
         <!--===== FOOTER =====-->
